--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.11",
     "pdfkit": "^0.17.2",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
